# bej-parser

./: .gitignore  CMakeLists.txt  Doxyfile.in
.github/workflows/: workflow.yml
include/: bej_decode.h  bej_dictionary.h  bej_encode.h  cli_args.h  cli_decode.h  cli_encode.h  json.h
src/: CMakeLists.txt  bej_decode.c  bej_dictionary.c  bej_encode.c  cli_args.c  cli_decode.c  cli_encode.c  json.c  main.c
tests/: CMakeLists.txt  test_bej_roundtrip.cpp  test_encode_compare.cpp
tests/data/: example1.json  example2.json  example3.json
